--- a/index22.html
+++ b/index22.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="./firework.css">
 </head>
 <body>
+    
     <div class="firework"></div>
     <div class="firework"></div>
     <div class="firework"></div>
     <audio src="Sound.mp3" id = "my-audio" controls autoplay loop></audio>
     <div class="my-form">  
+        <label for="time">18 : 10</label>
         <div id = "button1" class="button">
             <i id = "my-play" class = "fas fa-play"></i>
         </div>
