--- a/index.html
+++ b/index.html
@@ -1,73 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>18 : 10</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="./firework.css">
-</head>
-<body>
-    
-    <div class="firework"></div>
-    <div class="firework"></div>
-    <div class="firework"></div>
-    <audio src="Sound.mp3" id = "my-audio" controls autoplay loop></audio>
-    <div class="my-form">  
-        <label for="time">18 : 10</label>
-        <div id = "button1" class="button">
-            <i id = "my-play" class = "fas fa-play"></i>
-        </div>
-        <div class="my-form-1">
-            <div class="my-form-1-img">
-                <div class="img1">
-
-                </div>
-            </div>
-            <div class="my-form-1-title">
-                <h2>HAPPY</h2>
-                <h2>BIRTHDAY</h2>
-                <h2>TO YOU</h2>
-            </div>
-        </div>
-        <div class="my-form-2">
-            <p>Wishing you a Wonderful Day!</p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Aliquam sit amet elit quis augue porttitor euismod a eget metus. 
-                Aenean pharetra eros quis sem dapibus imperdiet. 
-                Cras id ipsum sapien. Sed scelerisque mi a mattis venenatis. 
-            </p>
-            <p>
-                Best wishes, 
-            </p>
-        </div>
-    </div>
-    <script> 
-        document.body.style.zoom = "127%"; 
-        var buttonNode = document.getElementById('button1'); 
-        var playNode = document.getElementById('my-play'); 
-        var audioNode = document.getElementById('my-audio'); 
-        var diskNode = document.querySelector('.img1'); 
-        button1.addEventListener('click',(e) => {
-            if (playNode.classList.contains('fa-play')) 
-            {
-                playNode.classList.remove('fa-play'); 
-                playNode.classList.add('fa-pause'); 
-                diskNode.classList.toggle('rotate'); 
-                audioNode.play(); 
-            }
-            else 
-            {
-                playNode.classList.remove('fa-pause'); 
-                playNode.classList.add('fa-play'); 
-                diskNode.classList.toggle('rotate'); 
-                audioNode.pause(); 
-            }
-        
-        }); 
-    </script>
-    <script src = "fireworkEffect.js"></script>
-</body>
-</html>
+Demo
